2004-05-24  Sarfraaz Ahmed  <asarfraaz@novell.com>

	Fixes #58754

	* calendar/e-cal-backend-exchange-tasks.c (create_task_object): Set 
	summary to empty string when it is NULL.

2004-05-21  Dan Winship  <danw@novell.com>

	* storage/exchange-hierarchy-webdav.c (xfer_folder): Return a
	better error when failing to rename a stock folder. #57387.

	* mail/mail-stub-exchange.c (rename_folder): Send the URI from the
	newly-renamed folder, not the no-longer-existent old folder

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	* camel/camel-exchange-store.c (exchange_get_folder): 
	* mail/mail-stub.c (connection_handler):
	* mail/mail-stub-exchange.c (get_folder): Handle the "create
	folder" option to camel_store_get_folder, to fix #57688

2004-05-21  Dan Winship  <danw@novell.com>

	* shell/Makefile.am (libfoldertree_a_SOURCES): Remove
	e-icon-factory; we'll use the one in e-util now

	* shell/e-icon-factory.c: Gone

	* shell/e-folder-type-registry.c
	(e_folder_type_registry_get_icon_for_type, etc): Remove. The
	registry will keep icon names, but the actual pixbufs will come
	from EIconFactory.

	* shell/e-folder-creation-dialog.c (add_folder_types): Use
	EIconFactory to get the actual pixbuf rather than expecting the
	folder type registry to have it.

	* shell/e-storage-set-view.c (get_pixbuf_for_folder): Always use
	EIconFactory, not just for custom icons.

	* storage/main.c (main): e_icon_factory_init ().

	* storage/exchange-hierarchy-webdav.c
	(exchange_hierarchy_webdav_new,
	exchange_hierarchy_webdav_construct): Remove custom_icon arg.
	Always use "stock_folder".
	(exchange_hierarchy_webdav_parse_folder): Use "stock_delete" for
	the trash icon.

	* storage/exchange-hierarchy-foreign.c (hierarchy_foreign_new):
	Remove custom_icon arg to exchange_hierarchy_webdav_construct

	* storage/exchange-account.c (exchange_account_connect): Remove
	the custom_icon arg to exchange_hierarchy_webdav_new.
