@@ -1,3 +1,8 @@
+2004-05-25  Nicel KM  <mnicel@novell.com>
+
+	* calendar/e-cal-backend-exchange.c (get_object_list):
+	put get_object_list in. recurrence part to be looked at
+
 2004-05-24  Sarfraaz Ahmed  <asarfraaz@novell.com>
 
 	Fixes #58754
